tests/NormalTests/paczka2/big_fuzzy/96207943.err
Error in line 6: AZ7E4 A317 78,8
Error in line 1: CzOIDJyN6 A317 12,3
Error in line 5: Oih A963 71,5
Error in line 9: AZ7E4 S28 62,2
Error in line 10: CzOIDJyN6 S696 79,9
Error in line 19: S696 A317 96,6
Error in line 14: AZ7E4 A963 36,3
Error in line 31: 010EGju S696 81,1
Error in line 35: 010EGju A963 80,4
Error in line 39: S696 S28 6,1
Error in line 41: 010EGju A963 68,8
Error in line 47: 010EGju S28 67,1
Error in line 49: 9eh S696 24,75
Error in line 27: 9Il A317 1,4
Error in line 57: S696 S696 11,8
Error in line 78: 9Il A963 90,4
Error in line 84: Oih A963 91,7
Error in line 97: 9Il A963 81,2
Error in line 111: Oih A963 37,4
Error in line 121: AZ7E4 S696 44,8
Error in line 126: AZ7E4 S28 53,6
Error in line 134: S696 A963 13,0
Error in line 135: CzOIDJyN6 A963 53,3
Error in line 151: Oih S28 75,8
Error in line 158: Oih S696 84,8
Error in line 164: AZ7E4 A963 4,8
Error in line 172: Oih A963 98,5
Error in line 173: Oih S28 33,2
Error in line 177: Oih A317 90,3
Error in line 176: 9eh S696 85,0
Error in line 183: Oih S28 34,2
Error in line 187: CzOIDJyN6 A317 20,4
Error in line 181: S696 A317 4,9
Error in line 198: AZ7E4 A963 19,40
Error in line 238: 9eh S28 63,6
Error in line 242: 9eh A963 19,0
Error in line 239: AZ7E4 S28 26,4
